Variable auch im Example hinzugefügt

--- a/Infrastructure/terraform.tfvars.example
+++ b/Infrastructure/terraform.tfvars.example
@@ -1,7 +1,8 @@
-USERNAME      = ""
-DEVOPS_ORG    = ""
-SUBSCRIPTION  = ""
-USERPRINCIPAL = ""
-TENANTID      = ""
-AZ_LOCATION   = ""
-DEVOPS_TOKEN  = ""
+USERNAME       = ""
+DEVOPS_ORG     = ""
+SUBSCRIPTION   = ""
+USERPRINCIPAL  = ""
+TENANTID       = ""
+AZ_LOCATION    = ""
+DEVOPS_TOKEN   = ""
+DEVOPS_PROJECT = ""
